step-6-staging-using-multiple-traefik/traefik-ingress-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: base-ingress
  annotations:
    kubernetes.io/ingress.class: staging-traefik
spec:
  rules:
  - host: staging.traefik.rookout-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: staging-hello-world-service
          servicePort: 80
